--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,58 +7,45 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/text_view_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="View 1" />
 
     <TextView
+        android:id="@+id/text_view_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_above="@id/text_view_1"
+        android:layout_centerInParent="true"
+        android:layout_toStartOf="@id/text_view_1"
         android:text="View 2" />
 
     <TextView
+        android:id="@+id/text_view_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@id/text_view_1"
+        android:layout_centerInParent="true"
+        android:layout_toEndOf="@id/text_view_1"
         android:text="View 3" />
 
     <TextView
+        android:id="@+id/text_view_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/text_view_1"
+        android:layout_centerInParent="true"
+        android:layout_toStartOf="@id/text_view_1"
         android:text="View 4" />
 
     <TextView
+        android:id="@+id/text_view_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_below="@id/text_view_1"
+        android:layout_centerInParent="true"
+        android:layout_toEndOf="@id/text_view_1"
         android:text="View 5" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:text="View 6" />
-
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View 7" />
-
-    <TextView
-        android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View 8" />
-
-    <TextView
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View 9" />
 </RelativeLayout>
