--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,35 +17,7 @@
         android:id="@+id/text_view_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@id/text_view_1"
         android:layout_above="@id/text_view_1"
-        android:layout_centerInParent="true"
-        android:layout_toStartOf="@id/text_view_1"
         android:text="View 2" />
-
-    <TextView
-        android:id="@+id/text_view_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/text_view_1"
-        android:layout_centerInParent="true"
-        android:layout_toEndOf="@id/text_view_1"
-        android:text="View 3" />
-
-    <TextView
-        android:id="@+id/text_view_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_1"
-        android:layout_centerInParent="true"
-        android:layout_toStartOf="@id/text_view_1"
-        android:text="View 4" />
-
-    <TextView
-        android:id="@+id/text_view_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_1"
-        android:layout_centerInParent="true"
-        android:layout_toEndOf="@id/text_view_1"
-        android:text="View 5" />
 </RelativeLayout>
